16315
I saw that there was a related issue https://issues.scala-lang.org/browse/SI-4474 on this but there are more issues also for List (and basically every collection that acts as a monad and has a flatten).
And SI-4474 was not included in 2.9.1.RC1.

Some things might have been fixed for 2.10 trunk but None and idempotency on groundlevel also for Option and List is not mentioned.
I hope it was also fixed for None because that had the same change of monadic context

What should Some(5).flatten and List(5).flatten on ground level do? 
I think they should return Some[Int] = Some(5) and List[Int] = List(5) respectively (idempotency). 

They now raise an error
scala> Some(5).flatten
<console>:8: error: No implicit view available from Int => scala.collection.Tra
ersableOnce[B].
              Some(5).flatten
                      ^
scala> List(5).flatten
<console>:8: error: No implicit view available from Int => scala.collection.Trav
ersableOnce[B].
              List(5).flatten
                      ^
but None.flatten and Nil.flatten do not raise an error. 

But None.flatten does change it context.
scala> None.flatten
res14: Iterable[Nothing] = List()


=========================================================
Welcome to Scala version 2.9.1.RC1 (Java HotSpot(TM) Client VM, Java 1.7.0).
Type in expressions to have them evaluated.
Type :help for more information.

scala> Some(Some(5))
res0: Some[Some[Int]] = Some(Some(5))

scala> Some(Some(5)).flatten
res1: Iterable[Int] = List(5)

scala> Some(5)
res2: Some[Int] = Some(5)

scala> Some(Some(5)).flatten == Some(5)
res3: Boolean = false

scala> Some(Some(Some(5)))
res8: Some[Some[Some[Int]]] = Some(Some(Some(5)))

scala> Some(Some(Some(5))).flatten
res9: Iterable[Some[Int]] = List(Some(5))

scala> None.flatten
res14: Iterable[Nothing] = List()

But for Lists it works:
===============

scala> List(List(5))
res4: List[List[Int]] = List(List(5))

scala> List(List(5)).flatten
res5: List[Int] = List(5)

scala> List(5)
res6: List[Int] = List(5)

scala> List(List(5)).flatten == List(5)
res7: Boolean = true

scala> List(List(List(5))).flatten
res12: List[List[Int]] = List(List(5))

scala> Nil.flatten
res15: List[Nothing] = List()
